--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,11 +26,27 @@ dist.jar=${dist.dir}/FTPTest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections-3.2.1.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-dbutils-1.5.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\commons-dbutils-1.5.jar
+file.reference.commons-lang-2.3.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\commons-lang-2.3.jar
+file.reference.commons-logging-1.0.4.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\commons-logging-1.0.4.jar
 file.reference.commons-net-3.3.jar=\\\\edp-fs-03\\twzppfs\\louie.zheng\\Desktop\\commons-net-3.3\\commons-net-3.3.jar
+file.reference.commons-net-3.3.jar-1=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\commons-net-3.3.jar
+file.reference.jtds-1.2.5.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\jtds-1.2.5.jar
+file.reference.log4j-1.2.17.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\log4j-1.2.17.jar
+file.reference.SDSUtility.jar=D:\\10_Life\\LifeInjuryModule\\dist\\lib\\SDSUtility.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-net-3.3.jar}
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-dbutils-1.5.jar}:\
+    ${file.reference.commons-lang-2.3.jar}:\
+    ${file.reference.commons-net-3.3.jar-1}:\
+    ${file.reference.jtds-1.2.5.jar}:\
+    ${file.reference.SDSUtility.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
